<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.popularmovies_stage2_bergamini.ScrollingActivity">
    <item
        android:id="@+id/action_sort_by_pop"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_pop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_rating"
        android:orderInCategory="200"
        android:title="@string/action_sort_by_rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_fav"
        android:orderInCategory="300"
        android:title="@string/action_show_fav"
        app:showAsAction="never" />
</menu>