<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/poster_child_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:contentDescription="@string/movie_poster_content_description"
            android:scaleType="fitStart" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/star_off_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:visibility="visible"
                android:background="@null"
                android:src="@android:drawable/btn_star_big_off" />

            <ImageButton
                android:id="@+id/star_on_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:visibility="gone"
                android:background="@null"
                android:src="@android:drawable/btn_star_big_on" />

        </FrameLayout>

    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickOpenTrailerOnYT"
                    android:text="@string/button_watch_trailer"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickOpenReviewsWebapge"
                    android:text="@string/button_read_reviews"/>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_movie_details"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/some_random_placeholder_text" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>